docs-archive/apache-airflow-providers-neo4j/3.12.0/_sources/_api/airflow/providers/neo4j/operators/neo4j/index.rst.txt
airflow.providers.neo4j.operators.neo4j
=======================================

.. py:module:: airflow.providers.neo4j.operators.neo4j


Classes
-------

.. autoapisummary::

   airflow.providers.neo4j.operators.neo4j.Neo4jOperator


Module Contents
---------------

.. py:class:: Neo4jOperator(*, cypher = None, sql = None, neo4j_conn_id = 'neo4j_default', parameters = None, **kwargs)

   Bases: :py:obj:`airflow.providers.common.compat.sdk.BaseOperator`


   Executes a Cypher query in a specific Neo4j database.

   .. seealso::
       For more information on how to use this operator, take a look at the guide:
       :ref:`howto/operator:Neo4jOperator`

   :param cypher: the Cypher query to be executed. Can receive a str representing a
       Cypher statement.
   :param sql: (Deprecated) the Cypher query to be executed. Use ``cypher`` instead.
   :param neo4j_conn_id: Reference to :ref:`Neo4j connection id <howto/connection:neo4j>`.
   :param parameters: the parameters to send to Neo4j driver session


   .. py:attribute:: template_fields
      :type:  collections.abc.Sequence[str]
      :value: ('cypher', 'parameters')



   .. py:attribute:: template_fields_renderers


   .. py:attribute:: neo4j_conn_id
      :value: 'neo4j_default'



   .. py:attribute:: cypher
      :value: None



   .. py:attribute:: parameters
      :value: None



   .. py:method:: execute(context)

      Derive when creating an operator.

      The main method to execute the task. Context is the same dictionary used
      as when rendering jinja templates.

      Refer to get_template_context for more context.



